--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,11 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-# REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7290774925:AAEAhBdbf3XubIrqwsz70zxd9meIo2OlK08"                              # Require restart after changing it while bot running
+OWNER_ID = "6403956826"                               # Require restart after changing it while bot running
+TELEGRAM_API = "29121050"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "be91f1de1f9f31e55cf8807561149c86"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://Subhadra:cwDkERIrnvLkhBRy@subhadra.chtqn.mongodb.net/?retryWrites=true&w=majority&appName=Subhadra"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
@@ -52,7 +49,7 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 
 # Update
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://gitlab.com/mysterysd.sd/WZML-X"
 UPSTREAM_BRANCH = ""
 UPGRADE_PACKAGES = ""
 
